fix: select subpanel button alignment

--- a/docker/advocase-image/build-files/suitecrm/public/legacy/themes/suite8/css/suitep-base/listview.scss
+++ b/docker/advocase-image/build-files/suitecrm/public/legacy/themes/suite8/css/suitep-base/listview.scss
@@ -3738,7 +3738,7 @@ input#securitygroups_users_select_button_old {
   position: absolute;
   top: 0;
   right: 0;
-  margin-right: 51px;
+  margin-right: 42px;
   padding: 20px 16px;
   line-height: 0;
 }
@@ -3758,7 +3758,7 @@ a#securitygroups_acl_roles_select_button {
   position: absolute;
   top: 0;
   right: 0;
-  margin-right: 53px;
+  margin-right: 42px;
   padding: 20px 16px;
   line-height: 0;
 }
@@ -3818,7 +3818,7 @@ a#documents_cases_select_button {
   position: absolute;
   top: 0;
   right: 0;
-  margin-right: 51px;
+  margin-right: 42px;
   padding: 20px 16px;
   line-height: 0;
 }
@@ -3838,7 +3838,7 @@ a#DocumentRevisions_create_button {
   position: absolute;
   top: 0;
   right: 0;
-  margin-right: 51px;
+  margin-right: 42px;
   padding: 20px 16px;
   line-height: 0;
 }
@@ -3858,7 +3858,7 @@ a#documents_contacts_select_button {
   position: absolute;
   top: 0;
   right: 0;
-  margin-right: 51px;
+  margin-right: 42px;
   padding: 20px 16px;
   line-height: 0;
 }
